--- a/test_1.ipynb
+++ b/test_1.ipynb
@@ -1577,7 +1577,7 @@
     "customers.dropna(subset=['gender'], inplace=True)\n",
     "plt.figure(figsize=(8, 5))\n",
     "plt.bar(gender_count.keys(), gender_count.values(), color=['pink', 'red', 'blue', 'silver'])\n",
-    "plt.title('Female v male gender')\n",
+    "plt.title('Table of genders')\n",
     "plt.show()"
    ]
   },
